# app-dl-final-project

./: .gitignore  main.py  notes.txt  pyproject.toml  v2.ipynb  v2.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  notes-checkpoint.txt  v2-checkpoint.ipynb
report/: ieee-conference.aux  ieee-conference.bbl  ieee-conference.blg  ieee-conference.fdb_latexmk  ieee-conference.fls  ieee-conference.tex  references.bib
